fix: Icon overflow in dashboard

--- a/src/components/common/Icon/Icon.module.scss
+++ b/src/components/common/Icon/Icon.module.scss
@@ -20,6 +20,7 @@
 
   img, svg {
     max-width: 100%;
+    max-height: 100%;
   }
 }
 
